# Bhujanga-AI-OLD-Archive

./: .gitignore  README.md  main.py  pyproject.toml
bhujanga_ai/: compare_runs.py  constants.py  dqn.py  game.py  game_new.py  helper.py  settings.ini  utils.py
bhujanga_ai/snakes/: basesnake.py  pathfinding_snakes.py  reinforced_snakes.py  utils.py
bhujanga_gym/: __init__.py  settings.ini  settings.py  setup.py  snake_game.py
bhujanga_gym/envs/: __init__.py  objects.py  renderer.py  snake_world.py  utils.py
bhujanga_gym/wrappers/: basic_stacked.py  full_view_wrapper.py  path_to_tail_wrapper.py  updated_reward.py
tests/: test_bhujanga_ai.py
