[tool.poetry]
name = "Bhujanga-AI"
version = "0.1.0"
description = "A Snake-AI Project. Attempt to create a diverse range of game agents."
authors = ["Hrushikesh Pawar <hrushikeshpawar96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
tqdm = "^4.64.1"
scipy = { version = "^1.9.3", python = ">=3.10,<3.12" }
seaborn = "^0.11.2"
torch = "^1.12.1"
torchvision = "^0.13.1"
gymnasium = "^0.26.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
loguru = "^0.6.0"
flake8 = "^4.0.1"
tensorboard = "^2.11.0"
torch-tb-profiler = "^0.4.0"
snakeviz = "^2.1.1"
pyinstrument = "^4.4.0"
line-profiler = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
