[tool.poetry]
name = "Bhujanga-AI"
version = "0.1.0"
description = "A Snake-AI Project. Attempt to create a diverse range of game agents."
authors = ["Hrushikesh Pawar <hrushikeshpawar96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mlflow-skinny = "^2.1.1"
pygame = "^2.1.3"
torch = "^1.13.1"
torchvision = "^0.14.1"
gymnasium = "^0.27.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
loguru = "^0.6.0"
flake8 = "^4.0.1"

[tool.poetry.group.extras.dependencies]
llvmlite = "^0.39.1"
pywin32 = "^305"
numba = "^0.56.4"
tqdm = "^4.64.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
